samples/_failures_safe/1761596443_ab038e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93daec77.c: In function ‘main’:
./samples/SAFE/__tmp_93daec77.c:148:17: error: expected ‘;’ at end of input
  148 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_93daec77.c:148:5: error: expected declaration or statement at end of input
  148 |     print_matrix
      |     ^~~~~~~~~~~~
